tests/negative/neg_pr1113a_constructor_arity.safe
package neg_pr1113a_constructor_arity

   type shape is circle (radius : integer) or idle;

   current : shape = circle ();
